--- a/italy.html
+++ b/italy.html
@@ -3,15 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Italy fact sheet</title>
+        <link href="css/style.css" rel="stylesheet">
     </head>
 
     <body>
 
-        <h1>Facts about Italy</h1>
+        <div id="box">
 
-        <img src="amalfi-coast.png" alt="amalfi amalfi coast">
-
-        <img src="colosseum.png" alt="colosseum">
+         <h1>Facts about Italy</h1>
 
     <h2>Introduction</h2>
 
@@ -20,6 +19,12 @@
     <p>A democratic republic replaced the monarchy in 1946 and economic revival followed. Italy is a charter member of NATO and the European Economic Community (EEC) and its subsequent successors the EC and the EU. It has been at the forefront of European economic and political unification, joining the Economic and Monetary Union in 1999.</p>
 
     <p>Persistent problems include sluggish economic growth, high youth and female unemployment, organized crime, corruption, and economic disparities between southern Italy and the more prosperous north.</p>
+
+
+    <figure>
+        <img src="images/img_amalfi.jpg" alt="The Amalfi Coast">
+        <figcaption>Closer view of some of the homes on the rugged western coast of Italy in the city of Amalfi. This picture is from the CIA World Factbook</figcaption>
+    </figure>
 
     <h2>Geography</h2>
 
@@ -66,7 +71,7 @@
 
     <p>The total population of Italy is 61,021,855</p>
 
-    <h3>population growth rate</h3>
+    <h3>Population growth rate</h3>
 
     <p> The population growth rate in Italy is 0.11% (2023 est.)</p>
 
@@ -88,7 +93,7 @@
 
     <h3>Administrative divisions</h3>
 
-    <p>15 regions and 5 autonomous regions</p>
+    <p>Italy has 15 regions and 5 autonomous regions</p>
 
     <h4>Regions</h4>
 
@@ -120,10 +125,18 @@
         <li>Valle d'Aosta</li>
     </ul>
 
+
+    <figure>
+        <img src="images/img_trevi.jpg" alt="The Trevi Fountain">
+        <figcaption>The Trevi Fountain in Rome. The baroque fountain was designed by Nicola Salvi in 1732. It depicts Neptune's chariot being led by Tritons with sea horses - one wild and one docile - representing the various moods of the sea. This picture is from the CIA World Factbook</figcaption>
+    </figure>
+
     <nav>
         <a href="https://www.cia.gov/the-world-factbook/countries/italy/">italy factbook</a>
         <a href="https://www.italia.it/en">italia</a>
     </nav>
+
+        </div>
 
     </body>
 </html>
